force-app/main/default/objects/Action_Override_Config__mdt/Action_Override_Config__mdt.object-meta.xml
<CustomObject>
    <label>Action Override Config</label>
    <pluralLabel>Action Override Configs</pluralLabel>
</CustomObject>