force-app/main/default/objects/Action_Override_Config__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>