force-app/main/default/objects/Action_Override_Config__mdt/fields/Allowed_Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Permission_Sets__c</fullName>
    <inlineHelpText>Type &apos;All&apos; for all Permission Set access.</inlineHelpText>
    <label>Allowed Permission Sets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>