force-app/main/default/objects/Action_Override_Config__mdt/fields/Custom_Target_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Target_Label__c</fullName>
    <label>Custom Target Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>