force-app/main/default/objects/Action_Override_Config__mdt/fields/Is_Modal_View__c.field-meta.xml
<CustomField>
    <fullName>Is_Modal_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Modal View?</label>
    <type>Checkbox</type>
</CustomField>