force-app/main/default/objects/Action_Override_Config__mdt/fields/Target_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Name__c</fullName>
    <label>Target Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>