force-app/main/default/objects/Action_Override_Config__mdt/listViews/Action_Override_Configs.listView-meta.xml
<ListView>
    <fullName>Action_Override_Configs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Action_Type__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Target_Type__c</columns>
    <columns>Target_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Modal_View__c</columns>
    <filterScope>Everything</filterScope>
    <label>Action Override Configs</label>
    <language>en_US</language>
</ListView>